Add HBase Shell Tricks